tester/testsuite/extensions/objects1/bad/bad010.jl
class A {

}

class B extends A {

}

int main() {
    B b = new A;
    return 1;
}
